--- a/Clients/Course.Web/appsettings.json
+++ b/Clients/Course.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ServiceApiSettings": {
-    "BaseUri": "http://localhost:5001",
+    "IdentityBaseUri": "http://localhost:5001",
+    "GatewayBaseUri": "http://localhost:5000",
     "PhotoStockUri": "http://localhost:5012"
   },
   "ClientSettings": {
@@ -12,7 +13,7 @@
       "ClientId": "WebMvcClientForUser",
       "ClientSecret": "secret"
     }
-  }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
