--- a/Services/Catalog/Course.Services.Catalog/Course.Services.Catalog.csproj
+++ b/Services/Catalog/Course.Services.Catalog/Course.Services.Catalog.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	  <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.16" />
   </ItemGroup>
 
   <ItemGroup>
