--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,5 @@
-version: "3.4"
+version: '3.4'
+
 services:
   catalogdb:
     container_name: catalogdb
@@ -50,124 +51,114 @@ services:
       - "5672:5672"
       - "15672:15672"
 
-  web:
-    container_name: web
+  catalog.api:
+    container_name: catalog.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - DatabaseSettings:ConnectionString=mongodb://catalogdb:27017
+      - RabbitMQUrl=rabbitmq
+      - IdentityServerUrl=http://identityserver.api
     ports:
-      - "80"
-
-
-  gateway:
-    container_name: gateway
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - IdentityServerURL=http://identityserver
-    ports:
-      - "5000:80"
-  aspnetcoremvc.web:
-    container_name: aspnetcoremvc.web
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ServiceApiSettings:IdentityBaseUri=http://identityserver
-      - ServiceApiSettings:GatewayBaseUri=http://gateway
-
-    ports:
-      - "5010:80"
+      - "5011:80"
     depends_on:
-      - gateway
-      - identityserver
-      - catalog
-      - basket
-      - discount
-      - order
-      - photostock
-      - fakepayment
-
-
-  identityserver:
-    container_name: identityserver
+      - catalogdb
+  identityserver.api:
+    container_name: identityserver.api
     restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:DefaultConnection=Server=identitydb,1433;Database=IdentityDb; User=sa; Password=Password12*"
+      - ConnectionStrings:DefaultConnection=Server=identitydb,1433;Database=IdentityDb; User=sa; Password=Password12* 
     ports:
       - "5001:80"
     depends_on:
       - identitydb
 
 
-  basket:
-    container_name: basket
+  basket.api:
+    container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - IdentityServerURL=http://identityserver
-      - RedisSettings:Port=6379
+      - RabbitMQUrl=rabbitmq
+      - IdentityServerUrl=http://identityserver.api
       - RedisSettings:Host=basketdb
+      - RedisSettings:Port=6379
     ports:
       - "5013:80"
     depends_on:
       - basketdb
 
 
-  catalog:
-    container_name: catalog
+  photostock.api:
+    container_name: photostock.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - RabbitMQUrl=rabbitmq
-      - IdentityServerURL=http://identityserver
-      - DatabaseSettings:ConnectionString=mongodb://catalogdb:27017
+      - IdentityServerUrl=http://identityserver.api
     ports:
-      - "5011:80"
-    depends_on:
-      - catalogdb
+      - "5012:80"
+    volumes:
+      - type: bind
+        source: 'C:\Users\avcih\OneDrive\images'
+        target: /app/wwwroot/photos
 
 
-  discount:
-    container_name: discount
+
+  discount.api:
+    container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - IdentityServerURL=http://identityserver
-      - "ConnectionStrings:PostgreSql=User ID=admin; Password=Password12*; Server=discountdb; Port=5432;Database=discountdb;Integrated Security=true;Pooling=true"
+      - ConnectionStrings:PostgreSql=User Id=admin;Password=Password12*;Server=discountdb;Port=5432;Database=discountdb;Integrated Security=true;Pooling=true
+      - IdentityServerUrl=http://identityserver.api
     ports:
       - "5014:80"
     depends_on:
       - discountdb
 
-
-  fakepayment:
-    container_name: fakepayment
+  fakepayment.api:
+    container_name: fakepayment.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - IdentityServerURL=http://identityserver
       - RabbitMQUrl=rabbitmq
+      - IdentityServerUrl=http://identityserver.api
     ports:
       - "5016:80"
 
 
-  order:
-    container_name: order
+  order.api:
+    container_name: order.api
     restart: on-failure
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - IdentityServerURL=http://identityserver
+      - ConnectionStrings:DefaultConnection=Server=orderdb,1433;Database=OrderDb; User=sa; Password=Password12*;TrustServerCertificate=True 
       - RabbitMQUrl=rabbitmq
-      - "ConnectionStrings:DefaultConnection=Server=orderdb,1433;Database=OrderDb; User=sa; Password=Password12*"
+      - IdentityServerUrl=http://identityserver.api  
     ports:
       - "5015:80"
     depends_on:
       - orderdb
 
+  gateway.api:
+    container_name: gateway.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - IdentityServerUrl=http://identityserver.api
+    ports:
+      - "5000:80"
 
-  photostock:
-    container_name: photostock
+
+  mvc.web:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - IdentityServerURL=http://identityserver
+      - ServiceApiSettings:IdentityBaseUri=http://identityserver.api 
+      - ServiceApiSettings:GatewayBaseUri=http://gateway.api
     ports:
-      - "5012:80"
-    volumes:
-      - type: bind
-        source: C:\Users\avcih\Desktop\photos
-        target: /app/wwwroot/photos
+      - "5010:80"
+    depends_on:
+      - gateway.api
+      - identityserver.api
+      - catalog.api
+      - basket.api
+      - discount.api
+      - order.api
+      - photostock.api
+      - fakepayment.api
 
